@@ -7,6 +7,7 @@
 - updated README
 - don't use tables for bilinear on float data for a small speedup (thanks
   Nicolas Robidoux)
+- no tables for uchar either, about a 15% speedup (thank Nicolas)
 
 30/11/10 started 7.24.0
 - bump for new stable
